@@ -23,6 +23,7 @@
 
 """Distutils extensions and utilities"""
 
+from distutils.command.install_data import install_data
 from distutils.command.install_lib import install_lib
 from distutils.dep_util import newer
 from distutils.log import info, warn
@@ -31,31 +32,54 @@ from fnmatch import fnmatch
 import os
 import sys
 
-class TemplateInstallLib(install_lib):
+class _VariableExtender:
+    def __init__(self, distribution):
+        install = distribution.get_command_obj('install')
+        name = distribution.get_name()
+        prefix = install.prefix
+        self.datadir = os.path.join(prefix, 'share', name)
+        if prefix == '/usr':
+            self.sysconfdir = '/etc'
+        else:
+            self.sysconfdir = os.path.join(prefix, 'etc')
+
+    def extend(self, string):
+        for name, var in [('sysconfdir', self.sysconfdir),
+                          ('datadir', self.datadir)]:
+            string = string.replace('$' + name, var)
+        return string
+
+class KiwiInstallLib(install_lib):
     # Overridable by subclass
     resources = {}
     global_resources = {}
-    name = None
 
-    def generate_template(self, resources, global_resources, prefix):
-        filename = os.path.join(self.install_dir, self.name,
-                                '__installed__.py')
+    def generate_template(self):
+        if 'bdist_wininst' in sys.argv:
+            prefix = 'import sys\nprefix = sys.prefix'
+        else:
+            install = self.distribution.get_command_obj('install')
+            prefix = 'prefix = "%s"' % install.prefix
+
+        name = self.distribution.get_name()
+        filename = os.path.join(self.install_dir, name, '__installed__.py')
         self.mkpath(os.path.dirname(filename))
         fp = open(filename, 'w')
         fp.write('# Generated by setup.py do not modify\n')
         fp.write('import os\n')
         fp.write('%s\n' % prefix)
-        self._write_dictionary(fp, 'resources', resources)
-        self._write_dictionary(fp, 'global_resources', global_resources)
+        self._write_dictionary(fp, 'resources', self.resources, prefix)
+        self._write_dictionary(fp, 'global_resources', self.global_resources,
+                               prefix)
         fp.close()
 
         return filename
 
-    def _write_dictionary(self, fp, name, dictionary):
+    def _write_dictionary(self, fp, name, dictionary, prefix):
+        name = self.distribution.get_name()
         fp.write('%s = {}\n' % name)
         for key, value in dictionary.items():
-            value = value.replace('$datadir', '$prefix/share/%s' % self.name)
-            value = value.replace('$sysconfdir', '$prefix/etc')
+            value = self.varext.extend(value)
             parts = []
             for part in value.split('/'):
                 if part == '$prefix':
@@ -68,21 +92,22 @@ class TemplateInstallLib(install_lib):
                 name, key, 'os.path.join(%s)' % ', '.join(parts)))
 
     def install(self):
-        if not self.name:
-            raise TypeError("%r is missing name" % self)
+        self.varext = _VariableExtender(self.distribution)
+        return install_lib.install(self) + [self.generate_template()]
 
-        if 'bdist_wininst' in sys.argv:
-            prefix = 'import sys\nprefix = sys.prefix'
-        else:
-            install = self.distribution.get_command_obj('install')
-            prefix = 'prefix = "%s"' % install.prefix
+# Backwards compat
+TemplateInstallLib = KiwiInstallLib
 
-        install = self.distribution.get_command_obj('install')
+class KiwiInstallData(install_data):
+    def run(self):
+        self.varext = _VariableExtender(self.distribution)
 
-        template = self.generate_template(self.resources,
-                                          self.global_resources,
-                                          prefix)
-        return install_lib.install(self) + [template]
+        # Extend variables in all data files
+        data_files = []
+        for target, files in self.data_files[:]:
+            data_files.append((self.varext.extend(target), files))
+        self.data_files = data_files
+        return install_data.run(self)
 
 def get_site_packages_dir(*dirs):
     """
